--- a/index.html
+++ b/index.html
@@ -3,58 +3,27 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Webpad | Notepad for the Web</title>
+        <title>Sticki | Simple Sticky Notes</title>
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <div class="container">
             <div class="flex-between">
                 <div>
-                    <h2>WebPad.</h2>
-                    <p>A sticky notepad, for the web.</p>
+                    <h1>Notes.</h1>
                 </div>
                 <div>
-                    <span id="themeModalOpen">👕</span>
+                    <span id="darkModeToggle">🌙</span>
                 </div>
             </div>
         </div>
+        
         <div id="notesContainer">
             <button id="addNote" type="button">+</button>
-        </div>
-
-        <div id="themeModal" class="modal">
-            <div class="modal__content">
-                <span class="modal__close" id="themeModalClose">&times;</span>
-
-                <h2>Background Color</h2>
-
-                <button class="colorbox" data-colorbox-clr="#ffffff" data-colorbox-of="backgroundColor"></button>
-                <button class="colorbox" data-colorbox-clr="#000000" data-colorbox-of="backgroundColor"></button>
-                <button class="colorbox" data-colorbox-clr="#7afcff" data-colorbox-of="backgroundColor"></button>
-                <button class="colorbox" data-colorbox-clr="#ff65a3" data-colorbox-of="backgroundColor"></button>
-                <hr class="lightline">
-                <input type="color" id="backgroundColor" name="bgclr" value="#e66465">
-                <label for="bgclr">Custom</label>
-
-                <h2>Card Color</h2>
-
-                <button class="colorbox" data-colorbox-clr="#fff740" data-colorbox-of="cardColor"></button>
-                <button class="colorbox" data-colorbox-clr="#ffffff" data-colorbox-of="cardColor"></button>
-                <button class="colorbox" data-colorbox-clr="#ff7eb9" data-colorbox-of="cardColor"></button>
-                <button class="colorbox" data-colorbox-clr="#feff9c" data-colorbox-of="cardColor"></button>
-                <hr class="lightline">
-                <input type="color" id="cardColor" name="cardclr" value="#e66465">
-                <label for="cardclr">Custom</label>
-
-                <h3>Card Text Color</h3>
-                <input type="color" id="cardTextColor" name="cardtextclr" value="#e66465">
-                <label for="cardtextclr">Custom</label>
-
-            </div>
         </div>
 
         <script src="js/main.js" defer></script>
