--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             <button id="addNote" type="button">+</button>
         </div>
 
+        <footer>
+            <div class="container">
+                <p>Made with 💝 by Alan</p>
+            </div>
+		</footer>
+
         <script src="js/main.js" defer></script>
     </body>
 </html>
